// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`all ColorMaps give the right output 1`] = `
[
  [
    68,
    1,
    84,
  ],
  [
    59,
    81,
    138,
  ],
  [
    33,
    144,
    139,
  ],
  [
    93,
    200,
    98,
  ],
  [
    253,
    231,
    37,
  ],
]
`;

exports[`all ColorMaps give the right output 2`] = `
[
  [
    0,
    0,
    4,
  ],
  [
    85,
    15,
    108,
  ],
  [
    186,
    54,
    84,
  ],
  [
    248,
    141,
    9,
  ],
  [
    252,
    255,
    164,
  ],
]
`;

exports[`all ColorMaps give the right output 3`] = `
[
  [
    0,
    0,
    0,
  ],
  [
    63,
    63,
    63,
  ],
  [
    127,
    127,
    127,
  ],
  [
    191,
    191,
    191,
  ],
  [
    255,
    255,
    255,
  ],
]
`;

exports[`all ColorMaps give the right output 4`] = `
[
  [
    0,
    0,
    127,
  ],
  [
    0,
    124,
    255,
  ],
  [
    125,
    255,
    129,
  ],
  [
    255,
    128,
    0,
  ],
  [
    127,
    0,
    0,
  ],
]
`;

exports[`all ColorMaps give the right output 5`] = `
[
  [
    0,
    0,
    0,
  ],
  [
    190,
    0,
    0,
  ],
  [
    255,
    129,
    0,
  ],
  [
    255,
    255,
    66,
  ],
  [
    255,
    255,
    254,
  ],
]
`;

exports[`all ColorMaps give the right output 6`] = `
[
  [
    0,
    255,
    255,
  ],
  [
    63,
    192,
    255,
  ],
  [
    127,
    128,
    255,
  ],
  [
    191,
    64,
    255,
  ],
  [
    255,
    0,
    255,
  ],
]
`;

exports[`all ColorMaps give the right output 7`] = `
[
  [
    255,
    0,
    255,
  ],
  [
    255,
    63,
    192,
  ],
  [
    255,
    127,
    128,
  ],
  [
    255,
    191,
    64,
  ],
  [
    255,
    255,
    0,
  ],
]
`;

exports[`all ColorMaps give the right output 8`] = `
[
  [
    0,
    127,
    102,
  ],
  [
    63,
    159,
    102,
  ],
  [
    127,
    191,
    102,
  ],
  [
    191,
    223,
    102,
  ],
  [
    255,
    255,
    102,
  ],
]
`;

exports[`all ColorMaps give the right output 9`] = `
[
  [
    255,
    0,
    0,
  ],
  [
    255,
    63,
    0,
  ],
  [
    255,
    127,
    0,
  ],
  [
    255,
    191,
    0,
  ],
  [
    255,
    255,
    0,
  ],
]
`;

exports[`all ColorMaps give the right output 10`] = `
[
  [
    0,
    0,
    255,
  ],
  [
    0,
    63,
    223,
  ],
  [
    0,
    127,
    191,
  ],
  [
    0,
    191,
    159,
  ],
  [
    0,
    255,
    127,
  ],
]
`;

exports[`all ColorMaps give the right output 11`] = `
[
  [
    0,
    0,
    0,
  ],
  [
    63,
    88,
    88,
  ],
  [
    127,
    127,
    127,
  ],
  [
    191,
    191,
    165,
  ],
  [
    255,
    255,
    255,
  ],
]
`;

exports[`all window functions give the right output 1`] = `
Float32Array [
  -0,
  0,
  -0.375,
  0,
  0.375,
  0,
  0,
  0,
]
`;

exports[`all window functions give the right output 2`] = `
Float32Array [
  -0.11999999731779099,
  0,
  -0.38499999046325684,
  0,
  0.38499999046325684,
  0,
  0.11999999731779099,
  0,
]
`;

exports[`all window functions give the right output 3`] = `
Float32Array [
  2.0816681711721685e-17,
  0,
  -0.3149999976158142,
  0,
  0.3149999976158142,
  0,
  -2.0816681711721685e-17,
  0,
]
`;

exports[`all window functions give the right output 4`] = `
Float32Array [
  -1.5,
  0,
  -0.5,
  0,
  0.5,
  0,
  1.5,
  0,
]
`;
